spacing error fixed on splash screen

--- a/front-end/src/splash_screen/login_form.css
+++ b/front-end/src/splash_screen/login_form.css
@@ -2,17 +2,12 @@
     height:18rem;
 }
 
-.err{
-    font-size: 11.5px;
-    color: red;
-}
-
-
 .create-account{
     font-size: 1rem;
 }
 
 .form{
+    margin-top: -1rem;
     width:26rem;
     font-weight: bold;
     border-radius:1rem;
